welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: '(' expected but identifier found.
		if getCouleurSol() == Color.green {
                   ^SlugTracking:13: error: illegal start of simple expression
	}
        ^